# ChangeLog for app-admin/perl-cleaner
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/perl-cleaner/ChangeLog,v 1.58 2009/12/19 13:58:51 tove Exp $

*perl-cleaner-2_pre091219 (19 Dec 2009)

  19 Dec 2009; Torsten Veller <tove@gentoo.org>
  +perl-cleaner-2_pre091219.ebuild:
  Version bump. Add virtuals too for non-identical reinstall

*perl-cleaner-2_pre091024 (24 Oct 2009)

  24 Oct 2009; Torsten Veller <tove@gentoo.org> -perl-cleaner-1.04.1.ebuild,
  -perl-cleaner-1.04.3.ebuild, -perl-cleaner-2_pre090920.ebuild,
  -perl-cleaner-2_pre090926.ebuild, +perl-cleaner-2_pre091024.ebuild:
  Version bump. Cleanup

  11 Oct 2009; Mark Loeser <halcy0n@gentoo.org> perl-cleaner-1.04.1.ebuild:
  QA fixes; unquoted variables

*perl-cleaner-2_pre091007 (07 Oct 2009)

  07 Oct 2009; Torsten Veller <tove@gentoo.org>
  +perl-cleaner-2_pre091007.ebuild:
  Bump. Don't rebuild libperl

*perl-cleaner-2_pre090926 (26 Sep 2009)

  26 Sep 2009; Torsten Veller <tove@gentoo.org>
  +perl-cleaner-2_pre090926.ebuild:
  Bump. Do not use binpkg when upgrading

*perl-cleaner-2_pre090920 (20 Sep 2009)

  20 Sep 2009; Torsten Veller <tove@gentoo.org>
  +perl-cleaner-2_pre090920.ebuild:
  Bump. Should work with changed useflags (ithreads, debug).
  Better package-manager support (taken from python-updater).

  05 Feb 2009; Jeremy Olexa <darkside@gentoo.org>
  perl-cleaner-1.04.1.ebuild, perl-cleaner-1.04.3.ebuild:
  (non maintainer commit) [QA] fix HOMEPAGE, bug 249679

  07 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  perl-cleaner-1.05.ebuild:
  amd64 stable wrt bug #208901

  17 Feb 2008; Raúl Porcel <armin76@gentoo.org> perl-cleaner-1.05.ebuild:
  alpha/ia64 stable wrt #208901

  16 Feb 2008; Markus Meier <maekke@gentoo.org> perl-cleaner-1.05.ebuild:
  x86 stable, bug #208901

  15 Feb 2008; nixnut <nixnut@gentoo.org> perl-cleaner-1.05.ebuild:
  Stable on ppc wrt bug 208901
