@@ -2,12 +2,14 @@ AUX perl-cleaner-1.05-prefix.patch 3501 RMD160 d9586806254418936c98145de34a7e22f
 AUX perl-cleaner-2_pre090920-prefix.patch 3139 RMD160 7365c755d0fcce1fe809941ff158219859c474d5 SHA1 dbce7ef8d3c49f6036a0684eca40c697a9e5c318 SHA256 a0aad60954938313c1a1cade58055aa2759f782625bd72a4d92e3b31c08fb9aa
 AUX perl-cleaner-2_pre090924-prefix.patch 3217 RMD160 9ab8d42bf903181bf1c9b68ef114280d506a3e86 SHA1 5825d85a7f200e01f017ae5cf745740ce0ea8503 SHA256 4216a2ea143a02ca01624bcf953b9fd1ceff3f954aaea062810cd8ce8092e273
 DIST perl-cleaner-1.05.tar.gz 5134 RMD160 caedda2a2e109676d76a003a9674b5fc7850cbd3 SHA1 3fd164d4c7de0f4e1609fa87878dabfc73835795 SHA256 efc0dae1f178acaf25b5f2f826f0af41ebe2cceb75eecf4c75eb997e22b50d1f
+DIST perl-cleaner-2.0.tar.bz2 5539 RMD160 3820e77e2bdbbf30cb6818dae32e76eefa9a2b09 SHA1 5fdcce8170214fc93947bde274599ed5845750a5 SHA256 493d67eaab3bffb3046a778857bd96e3c14b8347f6ffb685efb0335e89a66a60
 DIST perl-cleaner-2_pre091007.tar.bz2 5353 RMD160 0282b5bc7c415824838fe2b3a4d6673bb767c2a5 SHA1 db654c8777ce2be1370203d6a4a7563acba7ff54 SHA256 75d4a95857ba41294384c13ff4de47a924f70cf489fd384dd4207403e16827fa
 DIST perl-cleaner-2_pre091024.tar.bz2 5399 RMD160 327542ae5f4a1034b246dd2666014a3ba2693672 SHA1 0398d4285323aee9ac43b155414e01071278881d SHA256 c39e7e9aace11161d776a5545067f41f8d34904608ec1a5fa4c3957b9c2272e1
 DIST perl-cleaner-2_pre091219.tar.bz2 5530 RMD160 64af5dd9062f2b471469a6b889fa4331c420ba51 SHA1 bb73666e59c74f22b31e8b4e430ff53f6e6938c1 SHA256 05ae23b9cf9c7df442b6803ca04ead156513ef3a0b8e8340bc93547e822c59d0
 EBUILD perl-cleaner-1.05.ebuild 889 RMD160 e20c5d016a31dc4643d89cda581756a70c9cfef5 SHA1 142ce65feb396dd05ac12ceb5421f2d31cc411ca SHA256 afaf6b22a22e4de4c5edb9a438810062dfe6c4375855be53328b82462c66e19e
+EBUILD perl-cleaner-2.0.ebuild 957 RMD160 402ae1e44e93eb68365f42bd65b717d97d06ff94 SHA1 6ed65b7c0195f6893c5b44b8df97883fc7ec4221 SHA256 772ab230541144ae67f7530127448efdd67192355d7d3bf177571bbe36b2bdfc
 EBUILD perl-cleaner-2_pre091007.ebuild 917 RMD160 846d3da8c9cc1f20e23ecd3f5397d6af5513d45a SHA1 0fbc6924e13cef87d1b73f8cf6d931f3514ada50 SHA256 a5c5fc05801fac7f35866a5b7c29f2a79d5cd0f5719db332c03a77f8abdcef07
 EBUILD perl-cleaner-2_pre091024.ebuild 965 RMD160 cfb6536b9e7d3f31de3dab9b8cbdf404b8c5aafb SHA1 b223369e2cd765cc3366f554136f179ecbe7292b SHA256 a876f85ec2eddfc22977ae2bbd7b3ba76a4fafdf52a8bf84014abf08bd9c8042
 EBUILD perl-cleaner-2_pre091219.ebuild 965 RMD160 bdfc2597a11548feb782aaf0718699a86cdb5860 SHA1 bb0eb40be00c70395d7a2697da67202e4587eaa0 SHA256 0c79609c2c5ab339d6513315e20bc9e6534993b1934bc2d54f4d47ba6664aa20
-MISC ChangeLog 7977 RMD160 28e5e153d27d595fbaa6427a3dd2fb1cf6bd7610 SHA1 ff9483588beec2398fbff42d717318f6ec0da2c5 SHA256 7f34a3863ec66569c6cbf65fea109e427540230e8e9b671b899f9a5abc5a7daf
+MISC ChangeLog 8141 RMD160 a753a3a6d7988f09d37737273d03d564a7ba9ce9 SHA1 7d741cb93ee9d5166ab918f817cb33eda492240a SHA256 3fc2d2476a9f1d32ea088bec7b99fe21e99fde5d96194e56fc8b132b3c3c9b43
 MISC metadata.xml 224 RMD160 fd32d7dfd2dc8cb409642dd130cad02adfa217ed SHA1 ab59a5ad278cf42ffe2c349d0aa6f025f98b994d SHA256 7d1302c10f9b1a8ea6ce22057fa87754cbe057e6066f24086cffa88cdfc6e534
